<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/linear_gradient"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main"
    >

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="60dp"
        android:layout_height="46dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_home_black_24dp" />

    <TextView
        android:id="@+id/appName"
        android:layout_width="99dp"
        android:layout_height="40dp"
        android:text="immosnap"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appLogo" />

    <TextView
        android:id="@+id/questionView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/question"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appName" />

    <Button
        android:id="@+id/agentUser"
        android:layout_width="345dp"
        android:layout_height="153dp"
        android:layout_marginTop="48dp"
        android:background="#9EFFFFFF"
        android:onClick="createAgentUser"
        android:text="@string/agentUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionView" />

    <Button
        android:id="@+id/renterUser"
        android:layout_width="345dp"
        android:layout_height="153dp"
        android:layout_marginTop="36dp"
        android:background="#9EFFFFFF"
        android:onClick="createRenterUser"
        android:text="@string/renterUser"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/agentUser"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/switchLanguage"
        android:layout_width="52dp"
        android:layout_height="26dp"
        android:background="#00FFFFFF"
        android:text="EN/DE"
        android:textColor="#80000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>